# k8s-resource-broker

./: .env.example  .gitignore  Dockerfile  Dockerfile.broker-api  Dockerfile.performance-monitor  Dockerfile.recommender  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.superpowers/sdd/: task-1-brief.md  task-1-report.md
alembic/: env.py
alembic/versions/: 0001_active_services.py  0001_initial_schema.py  0002_active_pods.py  0002_profile_persistence.py  0003_normalized_profile_schema.py  0003_pod_performance_metric.py  0004_normalized_profile_schema.py
deploy/: namespace.yaml
deploy/crd/: profile-crd.yaml  resourceprofile-crd.yaml  strategy-crd.yaml
deploy/resource-broker/: configmap.yaml  deployment.yaml  mutating-webhook.yaml  rbac.yaml  service.yaml
deploy/samples/: annotated-deployment.yaml  profile-aggressive.yaml  profile-efficient.yaml  profile-k8s-aggressive.yaml  profile-requests-only.yaml  strategy-percentile-p75.yaml
deploy/samples/hello-world/: deployment.yaml  kustomization.yaml  profile.yaml  service.yaml
docs/: profile-and-strategy.md
docs/superpowers/plans/: 2026-06-20-resource-broker-01-crd-cache.md  2026-06-20-resource-broker-02-pod-performance-data.md  2026-06-20-resource-broker-03-service-deployment-engine.md
docs/superpowers/specs/: 2026-06-20-resource-broker-spine-redesign-design.md
openapi/: models.yaml
scripts/: dev-setup.sh  install-tools.sh  seed-data.json  setup-minikube.sh  test-minikube.sh
src/k8s_resource_broker/k8s-crd/crds/: profile-crd.yaml  resource-type-crd.yaml  strategy-crd.yaml
src/performance_monitor/: __init__.py
src/performance_monitor/adapters/: auth.py  base.py  factory.py  prometheus.py  thanos.py  victoriametrics.py
src/performance_monitor/data_store/: setup.py
src/performance_monitor/data_store/connectors/: base.py  factory.py  object_store.py  postgres.py
src/performance_monitor/data_store/usage/: base.py  cold.py  hot.py  hybrid.py
src/performance_monitor/data_store/watermark/: base.py  postgres.py
src/performance_monitor/query/: cadvisor.py  config.py  resolver.py  runner.py
src/resource_broker/: __init__.py  __main__.py  config.py
src/resource_broker/algorithms/: __init__.py  derived.py  percentile.py  registry.py  static.py
src/resource_broker/api/: app.py  schemas.py
src/resource_broker/api/controllers/: health.py  profiles.py  recommendations.py  webhook.py
src/resource_broker/broker_api/: __main__.py  app.py
src/resource_broker/broker_api/controllers/: crd_watcher.py  handler.py  health.py  profiles.py  recommendations.py  webhook.py
src/resource_broker/broker_api/services/: crd_cache.py  profile_loader.py  profile_registry.py  recommendation_service.py  strategy_registry.py  strategy_resolver.py
src/resource_broker/common/: config.py  k8s_client.py  k8s_units.py  logging.py  utils.py
src/resource_broker/common/dao/: database.py  legacy_database_service.py  orm_models.py
src/resource_broker/common/models/: __init__.py  alert.py  patch.py  profile.py  strategy.py  strategy_crd.py
src/resource_broker/common/resource_types/: __init__.py  (+4 more)
src/resource_broker/performance_monitor/: __main__.py
src/resource_broker/recommender/: __main__.py
src/resource_broker/resource_types/: __init__.py  base.py  k8s_resources.py  registry.py
tests/: conftest.py
tests/unit/: test_alert_sink.py  test_config.py  test_configured_resource.py  test_k8s_adapter.py  test_k8s_units.py  test_patcher.py  test_profiles.py  test_strategies.py
(+52 files in other folders)
