[project]
name = "k8s-resource-broker"
version = "0.1.0"
description = "Kubernetes resource broker — profile-driven pod resource patching with pluggable strategies"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "kubernetes>=30.0.0",
    "httpx>=0.28.0",
    "structlog>=24.0.0",
    "typer>=0.15.0",
    "orjson>=3.10.0",
    "python-dateutil>=2.9.0",
    "jsonschema>=4.23.0",
    "jsonpatch>=1.33",
    "jmespath>=1.0.0",
    "prometheus-client>=0.21.0",
    "cachetools>=5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "black>=24.0.0",
    "pre-commit>=4.0.0",
    "syrupy>=4.0.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
repository = "https://github.com/anomalyco/k8s-resource-broker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resource_broker"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/resource_broker/api/**" = ["B008", "ANN401"]
"src/resource_broker/api/schemas.py" = ["ANN401", "N815"]
"src/resource_broker/algorithms/base.py" = ["ANN401", "ARG002"]
"src/resource_broker/algorithms/static.py" = ["ANN401", "ARG002"]
"src/resource_broker/algorithms/derived.py" = ["ANN401", "ARG002"]
"src/resource_broker/watcher/services/**" = ["ANN401", "ARG002"]
"src/resource_broker/common/models/*.py" = ["ANN401"]
"src/resource_broker/common/k8s_client.py" = ["ANN401"]

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.git
  | alembic/versions
)/
'''

[tool.mypy]
python_version = "3.12"
strict = true
enable_error_code = ["ignore-without-code"]
exclude = [
    "tests/",
    "alembic/",
    "scripts/",
    "deploy/",
]

[[tool.mypy.overrides]]
module = ["kubernetes.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
